<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.dariomolina.life.MainActivity">


        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="top"
            android:src="@drawable/life_for_everyone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_marginTop="-11dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="22dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testimonial"
            android:paddingTop="5dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="22dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testimonial2"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testimonial1"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:textSize="13dp"
                android:text="Enroll"/>

            <Button
                android:id="@+id/steam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:textSize="13dp"
                android:text="STEAM"/>

            <Button
                android:id="@+id/supporters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:text="Sponsors"
                android:textSize="13dp"/>

            <Button
                android:id="@+id/involved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:textSize="13dp"
                android:text="Get Involved"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>